# optilab

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_NOTES_v1.0.2.md  SECURITY.md
.github/workflows/: native-windows.yml  reapack.yml
Effects/: optilab_core.jsfx
docs/: BROADCAST_HOST_TESTING.md  CLAP_ACCESSIBILITY.md  REPOSITORY_LAYOUT.md
native/: API.md  CLAP.md  CMakeLists.txt  CMakePresets.json  README.md  WINAMP.md
native/cmake/: OptiLabVersion.h.in
native/core/: OptiLabCore.cpp  OptiLabCore.h
native/plugins/clap/: OptiLabClap.cpp  OptiLabEditor.cpp  OptiLabEditor.h
native/plugins/winamp/: OptiLabWinampDsp.cpp  OptiLabWinampDsp.def  WinampDspApi.h  WinampPcm.cpp  resource.h
native/src/: OptiLabCore.cpp  OptiLabCore.h  WavFile.h  main.cpp
native/tests/: ClapPluginSmokeTests.cpp  OptiLabCoreTests.cpp  WinampPcmTests.cpp  WinampPluginSmokeTests.cpp
native/tools/cli/: WavFile.cpp
native/winamp/: OptiLabWinampDsp.cpp  OptiLabWinampDsp.rc  WinampPcm.h  resource.h
scripts/: install-clap.ps1  package-clap.ps1  package-winamp.ps1
